fix: corrigir comportamento do overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .container {
+  height: 100vh;
   background-color: #f0f1f3;
   display: flex;
   gap: 1rem;
+  overflow: hidden;
 }
 .components {
   padding: 1rem 1rem 0 1rem;
